<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
              xmlns:tools = "http://schemas.android.com/tools" android:layout_width = "match_parent"
                android:layout_height = "fill_parent"
                android:paddingLeft = "@dimen/activity_horizontal_margin"
                android:paddingRight = "@dimen/activity_horizontal_margin"
                android:paddingTop = "@dimen/activity_vertical_margin"
                android:paddingBottom = "@dimen/activity_vertical_margin"
                android:orientation = "vertical"
                android:gravity = "center_vertical|center|center_horizontal"
              tools:context = ".HomeActivity"
        >

    <TextView
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:textAppearance = "?android:attr/textAppearanceLarge"
            android:text = "@string/greeting"
            android:id = "@+id/txtSaludo"
            android:textColor = "@color/accent"
            android:textSize = "@dimen/abc_text_size_display_1_material"
            android:gravity = "center_vertical"
            android:textStyle = "bold"
            android:paddingTop = "60dp"
            />

    <TextView
            android:layout_width = "wrap_content" android:layout_height = "wrap_content" android:textAppearance = "?android:attr/textAppearanceLarge" android:text = "Usuario" android:id = "@+id/txtHNombre" android:textColor = "@color/secondary" android:textSize = "@dimen/font_size_normal" android:gravity = "center_vertical" android:textStyle = "italic"
            android:paddingBottom = "50dp"
            />

    <LinearLayout
            android:orientation = "vertical"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:gravity = "center_horizontal"
            android:layout_marginRight = "@dimen/margin_Medium"
            android:layout_marginLeft = "@dimen/margin_Medium"
            >

        <Button
                style = "?android:attr/buttonStyleSmall"
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/student"
                android:id = "@+id/btnHEstudiante"
                android:background = "@color/blue_grey_100"
                android:layout_marginBottom = "@dimen/padding_Medium"
                android:textSize = "@dimen/font_size_normal"
                android:textStyle = "bold"
                />

        <Button
                style = "?android:attr/buttonStyleSmall"
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/visit"
                android:id = "@+id/btnHVisita"
                android:background = "@color/light_blue_700"
                android:layout_marginBottom = "@dimen/padding_Medium"
                android:textSize = "@dimen/font_size_normal"
                android:textStyle = "bold"
                />

        <Button
                style = "?android:attr/buttonStyleSmall"
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:text = "@string/practices"
                android:id = "@+id/btnPractice"
                android:background = "@color/button_material_dark"
                android:layout_marginBottom = "@dimen/padding_Medium"
                android:textSize = "@dimen/font_size_normal"
                android:textStyle = "bold"
                android:visibility = "invisible"
                />

        <Button
                style = "?android:attr/buttonStyleSmall" android:layout_width = "fill_parent" android:layout_height = "wrap_content" android:text = "Salir" android:id = "@+id/btnHSalir" android:background = "@color/button_material_dark" android:layout_marginBottom = "@dimen/padding_Medium" android:textSize = "@dimen/font_size_normal" android:textStyle = "bold"
                />

    </LinearLayout>

</LinearLayout>
